Issue 6570: Add tooltip when cookie is marked as deleted

--- a/extension/locale/en-US/cookies.properties
+++ b/extension/locale/en-US/cookies.properties
@@ -181,12 +181,14 @@ cookies.header.expires.tooltip=Expiration date for the cookie
 cookies.header.security.tooltip=Shows whether it is a secure cookie or not
 cookies.header.httponly.tooltip=Shows if the cookie is an HTTP only cookie
 cookies.header.maxAge.tooltip=Maximum time to store the cookie
-# LOCALIZATION NOTE (cookies.netinfo.Received_Cookies, cookies.netinfo.Sent_Cookies):
+# LOCALIZATION NOTE (cookies.netinfo.Received_Cookies, cookies.netinfo.Sent_Cookies,
+# cookies.netinfo.deleted.tooltip):
 # Labels used in the Firebug's net panel. If there are any cookies associated with a network
 # request, there is an additional Cookies tab displayed when the user expands the request.
 # These labels are used within this tab.
 cookies.netinfo.Received_Cookies=Received Cookies
 cookies.netinfo.Sent_Cookies=Sent Cookies
+cookies.netinfo.deleted.tooltip=Request expired the cookie
 # LOCALIZATION NOTE (cookies.Path_Filter): Label for a Filter->Path Filter
 # xxxHonza: Not implemented yet.
 cookies.Path_Filter=Path Filter
