Use a single string for "(Script panel must be enabled)"

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -106,7 +106,6 @@ ShowXMLHTMLErrors=Show XML/HTML Errors
 console.option.tip.Show_XML_HTML_Errors=Log XML and HTML error messages into the console
 ShowStackTrace=Show Stack Trace With Errors
 console.option.tip.Show_Stack_Trace=Show stack trace information for error messages
-console.option.tip.Show_Stack_Trace2=Show stack trace information for error messages (Script panel must be enabled)
 ShowXMLHttpRequests=Show XMLHttpRequests
 console.option.tip.Show_XMLHttpRequests=Log XMLHttpRequests into the console
 ShowChromeErrors=Show Chrome Errors
@@ -686,8 +685,7 @@ TimeHeaderTooltip=Time spent in function including nested calls
 AvgHeaderTooltip=Average time including function calls
 MinHeaderTooltip=Minimum time including function calls
 MaxHeaderTooltip=Maximum time including function calls
-ProfileButton.Enabled.Tooltip=Profile JavaScript execution time
-ProfileButton.Disabled.Tooltip=Profile JavaScript execution time (Script panel must be enabled)
+ProfileButton.Tooltip=Profile JavaScript execution time
 Function=Function
 Percent=Percent
 # LOCALIZATION NOTE (Calls, OwnTime, Time, Avg, Min, Max, File): Used in profiler report header
@@ -1472,6 +1470,11 @@ script.suggestion.debugger_active=The debugger is currently halted at a breakpoi
 script.button.Go_to_that_page=Go to that page
 script.warning.debugger_not_activated=Debugger not activated
 script.suggestion.debugger_not_activated=Debugger not activated
+# LOCALIZATION NOTE (script.Script_panel_must_be_enabled): Adds a parenthetical note to a tooltip
+# about the Script panel having to be enabled.
+# %S = original message
+# example: "Profile JavaScript execution time (Script panel must be enabled)"
+script.Script_panel_must_be_enabled=%S (Script panel must be enabled)
 # firebug.dtd
 firebug.Firebug=Firebug
 firebug.Close=Close
