Issue 6581: 	Append a help link into the Selectors side panel

--- a/extension/locale/en-US/selectors.properties
+++ b/extension/locale/en-US/selectors.properties
@@ -10,6 +10,10 @@ css.selector.noSelection=Type a custom selector or right click a CSS rule and pi
 # LOCALIZATION NOTE (css.selector.noSelectionResults, css.selector.invalidSelector):
 # Info messages for selector trials in Selectors side panel
 css.selector.noSelectionResults=No matching elements
+# LOCALIZATION NOTE (css.selector.readMore):
+# Helper text with a link to getfirebug.com/wiki for the Selectors panel.
+css.selector.readMore=You can <a>read more</a> about how to use this panel.
+# LOCALIZATION NOTE (css.selector.invalidSelector):
 css.selector.invalidSelector=Invalid selector entered
 # LOCALIZATION NOTE (css.selector.TryASelector):
 # Placeholder label for the Selectors side panel's input field for creating new selector trials
