Issue 6095: 	Implement an option to minimize the side panels

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -1134,6 +1134,12 @@ firebug.console.Debug_Info=Debug Info
 firebug.console.Filter_by_Debug_Info=Filter by debug info
 firebug.Deactivate_Firebug=Deactivate Firebug
 firebug.tip.Deactivate_Firebug=Deactivate Firebug for the current website
+
+# LOCALIZATION NOTE (firebug.tip.Toggle_Side_Panels): A tooltip used for side panels visibility
+# toggle button. The button is available on the right side of panel's toolbar (only for panels
+# that have a side panel).
+firebug.tip.Toggle_Side_Panels=Toggle visibility of side panels
+
 firebug.ShowFirebug=Open Firebug
 firebug.menu.tip.Open_Firebug=Show the Firebug UI
 firebug.HideFirebug=Hide Firebug
