Issue 2198 (@sourceURL doesn't work in eval() in some cases) http://code.google.com/p/fbug/issues/detail?id=2198

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -511,6 +511,13 @@ computed.option.tip.Show_Mozilla_Specific_Styles=Also show styles prefixed with 
 # user-defined CSS rules applying to the selected element.
 computed.No_User-Defined_Styles=This element has no user-defined style rules.
 script.Type_any_key_to_filter_list=Type any key to filter list
+# LOCALIZATION NOTE (location.inline):
+# Label used within the Location Menu for inline styles or scripts
+location.inline=Inline
+# LOCALIZATION NOTE (location.no_domain):
+# Label used within the Location Menu for the group of scripts,
+# which don't have a domain specified like e.g. eval()'ed scripts
+location.no_domain=No Domain
 # LOCALIZATION NOTE (LayoutPadding, LayoutBorder, LayoutMargin, LayoutPosition, LayoutAdjacent):
 # Labels used to describe layout properties a the selected HTML element.
 # Used in the Layout side panel (within HTML panel).
