--- a/extension/locale/pl/cookies.properties
+++ b/extension/locale/pl/cookies.properties
@@ -61,196 +61,200 @@ cookies.confirm.removeall=Czy chcesz usunąć wszystkie ciasteczka z listy?
 cookies.confirm.removeallsession=Czy chcesz usunąć wszystkie ciasteczka sesji z listy?
 # LOCALIZATION NOTE (cookies.msg.Do_not_show_this_message_again): 
 # Message within a confirmation dialog that is displayed when deleting cookies.
-cookies.confirm.Remove_All_From_Host=Do you want to remove all cookies from %S?
+cookies.confirm.Remove_All_From_Host=Czy chcesz usunąć wszystkie ciasteczka z %S?
 # This message is displayed next to a check-box that can be used to disabled this
 # confirmation.
-# LOCALIZATION NOTE (cookies.Confirm_cookie_removal): A label used for option (mini tab menu)
-# that says whether a confirmation dialog is displayed when removing cookies. 
-cookies.msg.Do_not_show_this_message_again=Nie wyświetlaj tej informacji ponownie
-# LOCALIZATION NOTE (cookies.removeall.tooltip): A tooltip for Cookies->Remove Cookies menu
-# LOCALIZATION NOTE (cookies.Remove_Session_Cookies): A label used for
 cookies.Confirm_cookie_removal=Potwierdzaj usuwanie ciasteczek
 cookies.tip.Confirm_cookie_removal=Jeśli funkcja ta zostanie uaktywniona, przed usunięciem wszystkich ciasteczek z listy będzie wyświetlane okno dialogowe z prośbą o potwierdzenie wykonania operacji.
-# Cookies->Remove Session Cookies menu
+# LOCALIZATION NOTE (cookies.Confirm_cookie_removal): A label used for option (mini tab menu)
 cookies.removeall.tooltip=Usuwa wszystkie ciasteczka z listy
-# LOCALIZATION NOTE (cookies.removeall.tooltip): A tooltip for Cookies->Remove Session Cookies menu
-# LOCALIZATION NOTE (cookies.createcookie.tooltip): A tooltip for Cookies->Create Cookie menu
+# that says whether a confirmation dialog is displayed when removing cookies. 
+# LOCALIZATION NOTE (cookies.removeall.tooltip): A tooltip for Cookies->Remove Cookies menu
 cookies.Remove_Session_Cookies=Usuń ciasteczka sesji
-# examples: Create new cookie for www.softwareishard.com
+# LOCALIZATION NOTE (cookies.Remove_Session_Cookies): A label used for
 cookies.removeallsession.tooltip=Usuwa wszystkie ciasteczka sesji z listy
+# Cookies->Remove Session Cookies menu
+# LOCALIZATION NOTE (cookies.removeall.tooltip): A tooltip for Cookies->Remove Session Cookies menu
+cookies.createcookie.tooltip=Tworzy nowe ciasteczko dla %S
+# LOCALIZATION NOTE (cookies.createcookie.tooltip): A tooltip for Cookies->Create Cookie menu
+cookies.createcookie.defaultvalue=Zawartość
+# examples: Create new cookie for www.softwareishard.com
 # LOCALIZATION NOTE (cookies.createcookie.defaultvalue): Default value for newly created cookie.
 # LOCALIZATION NOTE (cookies.perm.manage.tooltip): A tooltip for permissions button that
-cookies.createcookie.tooltip=Tworzy nowe ciasteczko dla %S
-# is located on a Cookis panel toolbar.
-cookies.createcookie.defaultvalue=Zawartość
-# examples: Manage cookie permissions for www.softwareishard.com
-# LOCALIZATION NOTE (cookies.console.cookiescleared): A label for a cookie event that is
-# displayed in Firebug's Console panel when all cookie in Firefox are removed
 cookies.perm.manage.tooltip=Zarządzanie zezwoleniami ciasteczek dla %S
-# To remove all cookies use menu on Cookis panel toolbar: Tools->Show All Cookies and click
-# Remove All Cookies in the dialog.
+# is located on a Cookis panel toolbar.
+# examples: Manage cookie permissions for www.softwareishard.com
 # LOCALIZATION NOTE (cookies.console.cookiescleared): A label for a cookie event that is
 # displayed in Firebug's Console panel when all cookie in Firefox are removed
 cookies.console.cookiescleared=Wszystkie ciasteczka zostały usunięte.
 # To remove all cookies use menu on Cookis panel toolbar: Tools->Show All Cookies and click
 # Remove All Cookies in the dialog.
-# LOCALIZATION NOTE (cookies.console.cookiesrejected, cookies.console.nocookiesreceived):
-# A label for a cookie event that is displayed in Firebug's Console panel when cookies are
+# LOCALIZATION NOTE (cookies.console.cookiescleared): A label for a cookie event that is
+# displayed in Firebug's Console panel when all cookie in Firefox are removed
 cookies.console.sessioncookiescleared=Wszystkie ciasteczka sesji zostały usunięte.
-# rejected by the current site.
-# LOCALIZATION NOTE (cookies.console.cookie, cookies.console.deleted, cookies.console.added,
-# cookies.console.changed, cookies.console.cleared): Various labels that are used for cookie
+# To remove all cookies use menu on Cookis panel toolbar: Tools->Show All Cookies and click
+# Remove All Cookies in the dialog.
+# LOCALIZATION NOTE (cookies.console.cookiesrejected, cookies.console.nocookiesreceived):
 cookies.console.cookiesrejected=Ciasteczka odrzucone:
 cookies.console.nocookiesreceived=Nie otrzymano ciasteczek
-# events displayed in Firebug's Console panel.
-# LOCALIZATION NOTE (cookies.domain.label): Label used for marking domain cookie.
-# Displayed in the Cookies panel for domain cookies.
+# A label for a cookie event that is displayed in Firebug's Console panel when cookies are
+# rejected by the current site.
+# LOCALIZATION NOTE (cookies.console.cookie, cookies.console.deleted, cookies.console.added,
 cookies.console.cookie=Ciasteczko
 cookies.console.deleted=usunięto
 cookies.console.added=dodano
 cookies.console.changed=zmieniono
 cookies.console.cleared=wyczyszczono
+# cookies.console.changed, cookies.console.cleared): Various labels that are used for cookie
+# events displayed in Firebug's Console panel.
+# LOCALIZATION NOTE (cookies.domain.label): Label used for marking domain cookie.
+cookies.domain.label=Domena
+# Displayed in the Cookies panel for domain cookies.
 # xxxHonza: not used in the UI now.
+cookies.secure.label=Bezpieczne
 # LOCALIZATION NOTE (cookies.secure.label): Label used for marking secure cookie.
 # Displayed in the Cookies panel for secure cookies.
-cookies.domain.label=Domena
 # LOCALIZATION NOTE (cookies.status.accepted, cookies.status.downgraded,
-# cookies.status.flagged, cookies.status.rejected): Various statuses of a cookie
-cookies.secure.label=Bezpieczne
-# displayed in Status column.
-# LOCALIZATION NOTE (cookies.info.valuetab.label, cookies.info.rawdatatab.Raw_Data,
-# cookies.info.jsontab.JSON, cookies.info.xmltab.XML): A label for tabs displayed
 cookies.status.accepted=Zaakceptowane
 cookies.status.downgraded=Zdegradowane
 cookies.status.flagged=Oznaczone
 cookies.status.rejected=Odrzucone
-# if a cookie entry is expanded. Tab are only available in the UI, if necessary.
-# LOCALIZATION NOTE (cookies.default.session, cookies.default.thirdPartySession,
-# cookies.default.thirdParty, cookies.default.allow, cookies.default.deny,
+# cookies.status.flagged, cookies.status.rejected): Various statuses of a cookie
+# displayed in Status column.
+# LOCALIZATION NOTE (cookies.info.valuetab.label, cookies.info.rawdatatab.Raw_Data,
 cookies.info.valuetab.label=Zawartość
 cookies.info.rawdatatab.Raw_Data=Dane RAW
 cookies.info.jsontab.JSON=JSON
 cookies.info.xmltab.XML=XML
+# cookies.info.jsontab.JSON, cookies.info.xmltab.XML): A label for tabs displayed
+# if a cookie entry is expanded. Tab are only available in the UI, if necessary.
+# LOCALIZATION NOTE (cookies.default.session, cookies.default.thirdPartySession,
+# cookies.default.thirdParty, cookies.default.allow, cookies.default.deny,
 # cookies.default.warn, cookies.host.session, cookies.host.accept,
-# cookies.host.reject): Various labels for cookie permissions.
-# examples: Accept cookies from www.softwareishard.com
-# LOCALIZATION NOTE (cookies.edit.invalidname, cookies.edit.invalidhost,
-# cookies.edit.invalidpath): Various error messages used when a new cookie is created
 cookies.default.session=Akceptuj ciasteczka sesji (domyślne)
 cookies.default.thirdPartySession=Akceptuj ciasteczka sesji (domyślne)
 cookies.default.thirdParty=Akceptuj ciasteczka (domyślne)
 cookies.default.allow=Akceptuj ciasteczka (domyślne)
 cookies.default.deny=Nie akceptuj ciasteczek (domyślne)
 cookies.default.warn=Pytaj przed zaakceptowaniem (domyślne)
+cookies.default.limitThirdParty=Akceptuj ciasteczka z innych witryn (domyślne)
 cookies.host.session=Akceptuj ciasteczka sesji z %S
 cookies.host.accept=Akceptuj ciasteczka z %S
 cookies.host.reject=Nie akceptuj ciasteczek z %S
-# using a cookie dialog. Use Cookies->Create Cookie menu to show the dialog.
-# LOCALIZATION NOTE (cookies.header.name, cookies.header.value, cookies.header.domain,
-# cookies.header.size, cookies.header.path, cookies.header.expires,
+cookies.host.limitThirdParty=Ogranicz ciasteczka z innych witryn do %S
+# cookies.host.reject): Various labels for cookie permissions.
+# examples: Accept cookies from www.softwareishard.com
+# LOCALIZATION NOTE (cookies.edit.invalidname, cookies.edit.invalidhost,
 cookies.edit.invalidname=Nazwa ciasteczka jest nieprawidłowa.
 cookies.edit.invalidhost=Serwer ciasteczka jest nieprawidłowy.
 cookies.edit.invalidpath=Ścieżka ciasteczka jest nieprawidłowa.
+# cookies.edit.invalidpath): Various error messages used when a new cookie is created
+# using a cookie dialog. Use Cookies->Create Cookie menu to show the dialog.
+# LOCALIZATION NOTE (cookies.header.name, cookies.header.value, cookies.header.domain,
+# cookies.header.size, cookies.header.path, cookies.header.expires,
 # cookies.header.security, cookies.header.status, cookies.header.httponly):
-# Column labels used in the cookie header.
-# LOCALIZATION NOTE (cookies.header.name.tooltip, cookies.header.value.tooltip,
-# cookies.header.domain.tooltip, cookies.header.size.tooltip, cookies.header.path.tooltip,
 cookies.header.name=Nazwa
 cookies.header.value=Zawartość
 cookies.header.rawValue=Zawartość RAW
 cookies.header.domain=Domena
 cookies.header.size=Wielkość
+cookies.header.rawSize=Wielkość RAW
 cookies.header.path=Ścieżka
 cookies.header.expires=Wygasa
 cookies.header.security=Bezpieczeństwo
 cookies.header.httponly=Tylko HTTP
+cookies.header.maxAge=Maks. wiek
+# Column labels used in the cookie header.
+# LOCALIZATION NOTE (cookies.header.name.tooltip, cookies.header.value.tooltip,
+# cookies.header.domain.tooltip, cookies.header.size.tooltip, cookies.header.path.tooltip,
 # cookies.header.expires.tooltip, cookies.header.security.tooltip,
 # cookies.header.status.tooltip, cookies.header.httponly.tooltip):
-# Column tooltips used in the cookie header.
-# LOCALIZATION NOTE (cookies.netinfo.Received_Cookies, cookies.netinfo.Sent_Cookies):
-# Labels used in the Firebug's net panel. If there are any cookies associated with a network
 cookies.header.name.tooltip=Nazwa ciasteczka
 cookies.header.value.tooltip=Zawartość ciasteczka
 cookies.header.rawValue.tooltip=Zawartość ciasteczka
 cookies.header.domain.tooltip=Domena przechowująca ciasteczko
+cookies.header.rawSize.tooltip=Wielkość RAW przechowywanych ciasteczek
 cookies.header.size.tooltip=Wielkość ciasteczka
 cookies.header.path.tooltip=Ścieżka do ciasteczka
 cookies.header.expires.tooltip=Data wygaśnięcia ciasteczka
 cookies.header.security.tooltip=Wskazuje czy ciasteczko jest bezpieczne, czy nie
 cookies.header.httponly.tooltip=Wyświetla tylko jeśli ciasteczko jest ciasteczkiem HTTP
+cookies.header.maxAge.tooltip=Maksymalny czas przechowywania ciasteczka
+# Column tooltips used in the cookie header.
+# LOCALIZATION NOTE (cookies.netinfo.Received_Cookies, cookies.netinfo.Sent_Cookies):
+# Labels used in the Firebug's net panel. If there are any cookies associated with a network
 # request, there is an additional Cookies tab displayed when the user expands the request.
 # These labels are used within this tab.
-# LOCALIZATION NOTE (cookies.Path_Filter): Label for a Filter->Path Filter
-# xxxHonza: Not implemented yet.
 cookies.netinfo.Received_Cookies=Odebrane ciasteczka
 cookies.netinfo.Sent_Cookies=Wysłane ciasteczka
-# LOCALIZATION NOTE (cookies.menu.Cookies): Label for menu Cookies, dislayed on the toolbar.
-# LOCALIZATION NOTE (cookies.export.Export_All_Cookies, cookies.export.Export_All_Cookies_Tooltip,
+cookies.netinfo.deleted.tooltip=Żądany czas wygaśnięcia ciasteczka
+# LOCALIZATION NOTE (cookies.Path_Filter): Label for a Filter->Path Filter
+# xxxHonza: Not implemented yet.
 cookies.Path_Filter=Filtr ścieżki
-# cookies.export.Export_For_Site, cookies.export.Export_For_Site_Tooltip): Labels and 
+# LOCALIZATION NOTE (cookies.menu.Cookies): Label for menu Cookies, dislayed on the toolbar.
 cookies.menu.Cookies=Ciasteczka
+# LOCALIZATION NOTE (cookies.export.Export_All_Cookies, cookies.export.Export_All_Cookies_Tooltip,
+# cookies.export.Export_For_Site, cookies.export.Export_For_Site_Tooltip): Labels and 
 # tooltips for exporting menus available under Cookies menus.
-# LOCALIZATION NOTE (cookies.message.There_is_no_active_page): An error message displayed
-# when the user is trying to create a cookie and there is no active page (site). This should
 cookies.export.Export_All_Cookies=Eksportuj wszystkie ciasteczka…
 cookies.export.Export_All_Cookies_Tooltip=Eksportuje wszystkie ciasteczka przeglądarki do pliku cookies.txt
 cookies.export.Export_For_Site=Eksportuj ciasteczka dla tej witryny…
 cookies.export.Export_For_Site_Tooltip=Eksportuje ciasteczka dla witryny %S do pliku cookies.txt
+# LOCALIZATION NOTE (cookies.message.There_is_no_active_page): An error message displayed
+# when the user is trying to create a cookie and there is no active page (site). This should
 # never happen.
+cookies.message.There_is_no_active_page=Nie ma aktywnej strony.
 # LOCALIZATION NOTE (cookies.Break_On_Cookie, cookies.Disable_Break_On_Cookie):
 # Tooltips for resume button that are used when the Cookies panel is currently selected.
-cookies.message.There_is_no_active_page=Nie ma aktywnej strony.
 # The button allows stopping JS execution when a cookie on the current page is modified
 # added or removed.
-# LOCALIZATION NOTE (cookies.Cookie_Breakpoints): Name of Cookie breakpoint group
-# displayed in Breakpoints panel (in the Script panel)
 cookies.Break_On_Cookie=Wstrzymaj na zmianie ciasteczka
 cookies.Disable_Break_On_Cookie=Wyłącz wstrzymanie na zmianie ciasteczka
+# LOCALIZATION NOTE (cookies.Cookie_Breakpoints): Name of Cookie breakpoint group
+# displayed in Breakpoints panel (in the Script panel)
+cookies.Cookie_Breakpoints=Punkty wstrzymania ciasteczek
 # LOCALIZATION NOTE (cookies.Break_On_Cookie, cookies.menu.tooltip.Break_On_Cookie):
 # Label and tooltip for a context menu item used when the user right clicks on a cookie. 
-cookies.Cookie_Breakpoints=Punkty wstrzymania ciasteczek
 # examples: Break on 'MyCookie' cookie
 # examples: Break on 'MyCookie' when removed or changed.
-# LOCALIZATION NOTE (cookies.menu.Edit_Breakpoint_Condition): Label for context menu item
-# used when user right clicks on a cookie with existing breakpoint.
 cookies.menu.Break_On_Cookie=Wstrzymaj na ciasteczku „%S”
 cookies.menu.tooltip.Break_On_Cookie=Wstrzymuje na ciasteczku „%S”, gdy zostało usunięte lub zmienione.
+# LOCALIZATION NOTE (cookies.menu.Edit_Breakpoint_Condition): Label for context menu item
+# used when user right clicks on a cookie with existing breakpoint.
+cookies.menu.Edit_Breakpoint_Condition=Modyfikuj warunki punktów wstrzymania
 # LOCALIZATION NOTE (cookies.Breakpoint_condition_evaluation_fails): Message displayed
 # within the Firebug Console panel if a cookie breakpoint condition fails when evaluated. 
-cookies.menu.Edit_Breakpoint_Condition=Modyfikuj warunki punktów wstrzymania
-# DTD strings converted (main Firecokie UI, see cookiePanel.xul)
-# LOCALIZATION NOTE (cookies.Tools, cookies.ToolsTooltip) Label and tooltip for Tools
 cookies.Breakpoint_condition_evaluation_fails=Nie udało się ocenić warunków punktu wstrzymania
-# menu on Cookies toolbar.
+# DTD strings converted (main Firecokie UI, see cookiePanel.xul)
 cookies.RemoveAll=Usuń ciasteczka
 cookies.Create=Utwórz ciasteczko
-# LOCALIZATION NOTE (cookies.ViewAll, cookies.ViewAllTooltip) Label and tooltip for
-# view all cookies menu item (Tools menu). This action opens Firefox built-in cookie manager window.
+# LOCALIZATION NOTE (cookies.Tools, cookies.ToolsTooltip) Label and tooltip for Tools
+# menu on Cookies toolbar.
 cookies.Tools=Narzędzia
 cookies.ToolsTooltip=Narzędzia
-# LOCALIZATION NOTE (cookies.ViewExceptions, cookies.ViewExceptionsTooltip) Label and
-# tooltip for Site Permissions menu item (Tools menu). This action opens Firefox built-in
+# LOCALIZATION NOTE (cookies.ViewAll, cookies.ViewAllTooltip) Label and tooltip for
+# view all cookies menu item (Tools menu). This action opens Firefox built-in cookie manager window.
 cookies.ViewAll=Wyświetl wszystkie ciasteczka…
 cookies.ViewAllTooltip=Otwiera menedżera ciasteczek
+# LOCALIZATION NOTE (cookies.ViewExceptions, cookies.ViewExceptionsTooltip) Label and
+# tooltip for Site Permissions menu item (Tools menu). This action opens Firefox built-in
 # dialog for setting web site cookie permissions.
-# LOCALIZATION NOTE (cookies.Filter, cookies.FilterTooltip, cookies.filter.byPath,
-# cookies.filter.byPathTooltip, cookies.filter.showRejectedCookies,
 cookies.ViewExceptions=Uprawnienia witryn…
 cookies.ViewExceptionsTooltip=Wyświetla listę dozwolonych lub zabronionych witryn
+# LOCALIZATION NOTE (cookies.Filter, cookies.FilterTooltip, cookies.filter.byPath,
+# cookies.filter.byPathTooltip, cookies.filter.showRejectedCookies,
 # cookies.filter.showRejectedCookiesTooltip): Labels and tooltips for cookie Filter menu
 # presented on the Cookie toolbar.
-# LOCALIZATION NOTE (cookies.edit.title, cookies.edit.name.label,
-# cookies.edit.domain.label, cookies.edit.path.label, cookies.edit.expire.label,
 cookies.Filter=Filtr
 cookies.FilterTooltip=Używaj dostarczonych funkcji do filtrowania listy ciasteczek
 cookies.filter.byPath=Filtruj ciasteczka wg aktualnej ścieżki
 cookies.filter.byPathTooltip=Wyświetla tylko ciasteczka pasujące do aktualnej ścieżki.
 cookies.filter.showRejectedCookies=Wyświetl odrzucone ciasteczka
 cookies.filter.showRejectedCookiesTooltip=Wyświetla na liście nawet odrzucone ciasteczka.
+# LOCALIZATION NOTE (cookies.edit.title, cookies.edit.name.label,
+# cookies.edit.domain.label, cookies.edit.path.label, cookies.edit.expire.label,
 # cookies.edit.value.label, cookies.edit.secure.label, cookies.edit.httponly.label,
 # cookies.edit.session.label): Edit Cookie dialog UI
-# LOCALIZATION NOTE (cookies.console.Cookies, cookies.console.Filter_By_Cookies)
-# Label and tooltip for a toolbar button displayed on the Console panel. Used for filtering.
 cookies.edit.title=Edytuj ciasteczko
 cookies.edit.name.label=Nazwa:
 cookies.edit.domain.label=Host:
@@ -261,12 +265,12 @@ cookies.edit.secure.label=Bezpieczne ciasteczko
 cookies.edit.httponly.label=Tylko HTTP
 cookies.edit.session.label=Sesja
 cookies.edit.urlEncode.label=Zawartość URL kodowania
-# LOCALIZATION NOTE (firebug.shortcut.removeAllCookies.label) Label used by the
-# Customize Shortcuts dialog (Firebug menu)
+# LOCALIZATION NOTE (cookies.console.Cookies, cookies.console.Filter_By_Cookies)
+# Label and tooltip for a toolbar button displayed on the Console panel. Used for filtering.
 cookies.console.Cookies=Ciasteczka
 cookies.console.Filter_By_Cookies=Filtruj wg ciasteczek
 # LOCALIZATION NOTE (firebug.shortcut.removeAllCookies.label) Label used by the
 # Customize Shortcuts dialog (Firebug menu)
 firebug.shortcut.removeAllCookies.label=Usuń wszystkie ciasteczka
-cookie.sizeinfo.Size=Size
-cookie.sizeinfo.Raw_Size=Raw Size
+cookie.sizeinfo.Size=Wielkość
+cookie.sizeinfo.Raw_Size=Wielkość RAW
