--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -827,15 +827,15 @@ console.Use_Arrow_keys,_Tab_or_Enter=Use Arrow keys, Tab or Enter
 # JavaScript is not available
 console.JSDisabledInFirefoxPrefs=JavaScript is disabled in your Firefox preferences. If you want to use the Console panel, then please enable this option via Tools > Options > Content > Enable JavaScript
 
-# LOCALIZATION NOTE (console.ScriptPanelMustBeEnabledForTraces): Message shown inside the Console
+# LOCALIZATION NOTE (console.ScriptPanelMustBeEnabledForTraces2): Message shown inside the Console
 # panel instead of a stack trace when it is missing because the script panel is disabled. The text
 # enclosed in <a></a> is a link which enables the Script panel.
-console.ScriptPanelMustBeEnabledForTraces=The Script panel must be enabled to get stack traces. <a>Enable Script panel.</a>
+console.ScriptPanelMustBeEnabledForTraces2=The Script panel must be enabled to get stack traces. <a type="enable">Enable Script panel.</a>
 
-# LOCALIZATION NOTE (console.DebuggerWasDisabledForError): Message shown inside the Console
+# LOCALIZATION NOTE (console.DebuggerWasDisabledForError2): Message shown inside the Console
 # panel instead of a stack trace when the script panel was disabled when the error was thrown,
-# but is now enabled.
-console.DebuggerWasDisabledForError=The debugger was deactivated when this error was thrown.
+# but is now enabled. The text enclosed in <a></a> is a link which reloads the page.
+console.DebuggerWasDisabledForError2=There is no stack trace since the error was logged before the Script panel was enabled. <a type="reload">Reload the page.</a>
 
 # LOCALIZATION NOTE (tooltip.multipleFiltersHint):
 # Hint used for Console and Net panel filter button tooltips describing the shortcut for selecting
