Locale update: zh-TW

--- a/extension/locale/zh-TW/firebug.properties
+++ b/extension/locale/zh-TW/firebug.properties
@@ -18,7 +18,7 @@ Panel-dom=DOM
 panel.tip.dom=檢測或調整 DOM 屬性
 Panel-css=樣式
 panel.tip.css=檢測或調整所選 DOM 節點的 CSS 規則
-Panel-computed=計算
+Panel-computed=計算樣式
 panel.tip.computed=檢測或調整所選 DOM 節點的 CSS 計算值
 Panel-layout=排版
 panel.tip.layout=檢測或調整所選 DOM 節點的排版資料
